--- a/nau8825/nau8825.vcxproj
+++ b/nau8825/nau8825.vcxproj
@@ -135,6 +135,7 @@
   <ItemGroup>
     <ClInclude Include="hidcommon.h" />
     <ClInclude Include="registers.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="spb.h" />
     <ClInclude Include="stdint.h" />
     <ClInclude Include="trace.h" />
@@ -143,6 +144,9 @@
   <ItemGroup>
     <ClCompile Include="spb.c" />
     <ClCompile Include="nau8825.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="nau8825.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
